Fix empty scrollbar in search

--- a/_assets/css/modules/_search.scss
+++ b/_assets/css/modules/_search.scss
@@ -2,7 +2,7 @@
 
   &__results {
     max-height: 70vh;
-    overflow-y: scroll;
+    overflow-y: auto;
     margin-top: 1rem;
     padding-left: 0;
     list-style-type: none;
